<resources>

    <string name="app_name">Tab Sitter</string>
    <string name="app_name_2">Bar Buddy</string>
    <string name="api_key">api_key_here</string>
    <string name="start_tab_title">Keep track of your tab</string>
    <string name="pick_drinks_button">What will you be drinking?</string>
    <string name="set_prices_button">Set drink prices.</string>
    <string name="set_tips_button">Set tip amount.</string>
    <string name="set_goal_button">What is your drinking goal?</string>
    <string name="start_tab_button">Start Tab</string>
    <string name="set_drinks_title">What will you be drinking?</string>
    <string name="beer_button">Beer</string>
    <string name="liquor_drink_button">Liquor Drink</string>
    <string name="shot_button">Shot</string>
    <string name="wine_button">Wine</string>
    <string name="other_button">Other</string>
    <string name="beer_button_yes">Beer\t(yes)</string>
    <string name="liquor_drink_button_yes">Liquor Drink\t(yes)</string>
    <string name="shot_button_yes">Shot\t(yes)</string>
    <string name="wine_button_yes">Wine\t(yes)</string>
    <string name="other_button_yes">Other\t(yes)</string>
    <string name="set_prices_title">Click to edit price per drink</string>
    <string name="price_default">$0.00</string>
    <string name="set_tips_title">Set Tipping Method</string>
    <string name="per_drink_button">Per Drink</string>
    <string name="percent_button">Percentage</string>
    <string name="tips_switch">Enable Tips</string>
    <string name="tips_selected_text_top">You will now be tipping</string>
    <string name="tip_amount">$ 0.00</string>
    <string name="tips_per_drink_text">on each drink you purchase.</string>
    <string name="tips_percent_text">on your final bill.</string>
    <string name="set_goal_title">Choose a Drinking Goal</string>
    <string name="sobriety_button">Sobriety</string>
    <string name="saver_button">Saver</string>
    <string name="count_button">Count</string>
    <string name="goal_explanation">Select a Goal</string>
    <string name="max_text">Max: </string>
    <string name="max_number">0</string>
    <string name="change_max_button">Change Max</string>
    <string name="settings_title">Settings</string>
    <string name="alarm_sound_button">Alarm Sound</string>
    <string name="alarm_distance_button">Alarm Radius</string>
    <string name="power_saver_button">Power Saver</string>
    <string name="geo_radius_default">100 meters</string>
    <string name="sobriety_title">Number of Drinks</string>
    <string name="saver_title">Current Tab</string>
    <string name="current_tab_text">Current Tab: </string>
    <string name="current_num_drinks_text">Number of Drinks: </string>
    <string name="edit_tab_button">Edit Tab</string>
    <string name="close_tab_button">Close Tab</string>
    <string name="dollar_default">$0.00</string>
    <string name="number_default">0</string>
    <string name="goal_text_placeholder">This allows you to keep a count of the drinks you have purchased.  There is no tab limit and there will be no alerts sent at any time.</string>
    <!-- Lobby -->
    <!-- XXXXXXXXXXXXXXXXXX -->
    <string name="disclaimer_button">Disclaimer</string>
    <string name="faqs_button">FAQs</string>
    <string name="welcome_title">Welcome to Tab Sitter!</string>
    <string name="welcome_text">Keep your bartender honest.</string>
    <string name="info_button">Info</string>
    <string name="alarm_button">Alarm</string>
    <string name="calculator_button">Calculator</string>
    <string name="settings_button">Settings</string>
    <!-- XXXXXXXXXXXXXXXXXX -->

    <string name="title_activity_show_geofence_transitions">ShowGeofenceTransitionsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="geofence_enter">Now entering %1$s</string>
    <string name="geofence_dwell">Dwelling in %1$s</string>
    <string name="geofence_exit">Now exiting %1$s</string>
    <string name="events">Events</string>
    <string name="map">Map</string>
    <string name="transition">Transition</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">App registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many PendingIntents provided</string>
    <string name="unknown_geofence_error">Unknown error</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Buttons strings -->
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>

    <!-- Error strings -->
    <string name="not_connected">GoogleApiClient no yet connected. Try again.</string>
    <string name="geofence_transition_invalid_type">        Geofence transition error: invalid transition type %1$d</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>

    <!-- UI -->
    <!-- XXXXXXXXXXXXXXXXXX -->
    <string name="geofence1">Geofence 1</string>
    <string name="geofence2">Geofence 2</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="menu_item_clear_geofence1">Clear geofence 1</string>
    <string name="menu_item_clear_geofence2">Clear geofence 2</string>
    <string name="menu_item_clear_all_geofences">Clear all geofences</string>
    <string name="menu_item_clear_geofence_history">Clear stored geofences</string>
    <string name="radius">Radius</string>
    <!-- XXXXXXXXXXXXXXXXXX -->


    <!-- Messages -->
    <!-- XXXXXXXXXXXXXXXXXX -->
    <string name="add_geofences_result_success">        Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="add_geofences_result_failure">        Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="add_geofences_already_requested_error">        Can\'t add geofences, previous request hasn\'t finished.</string>
    <string name="connected">Client connected</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="geofence_input_error_missing">Missing value</string>
    <string name="geofence_input_error_latitude_invalid">        Invalid latitude(s). Must be in the range -90 to 90 degrees</string>
    <string name="geofence_input_error_longitude_invalid">        Invalid longitude(s). Must be in the range -180 to 180 degrees</string>
    <string name="geofence_input_error_radius_invalid">        Invalid radius(s). Must be 1 meter or greater.</string>
    <string name="geofence_transition_notification_title">        %1$s geofence(s) %2$s</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="latitude_error_message">        Latitude should be in the range -90 to 90 degrees</string>
    <string name="longitude_error_message">        Longitude should be in the range -180 to 180 degrees</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="play_services_available">Location Services is available</string>
    <string name="radius_error_message">Radius must be greater than or equal to 0</string>
    <string name="register_geofence">Register geofence</string>
    <string name="remove_geofences_id_failure">        Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="remove_geofences_already_requested_error">        Can\'t remove geofences, previous request hasn\'t finished.</string>
    <string name="remove_geofences_id_success">        Removing geofences by request ids succeeded: request ids: %1$s</string>
    <string name="remove_geofences_intent_failure">        Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_intent_success">        Removing all geofences succeeded.</string>
    <string name="transition_entered">entered</string>
    <string name="transition_exited">exited</string>
    <string name="transition_unknown">unknown</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="unregister_geofence">Remove geofences</string>
    <string name="unregister_geofence1">Remove geofence 1</string>
    <string name="unregister_geofence2">Remove geofence 2</string>
    <!-- XXXXXXXXXXXXXXXXXX -->


    <!-- Number patterns -->
    <!-- XXXXXXXXXXXXXXXXXX -->
    <string name="lat_lng_pattern">* ###.00000000;* -###.00000000</string>
    <string name="radius_pattern">* #.0000</string>
    <!-- XXXXXXXXXXXXXXXXXX -->


    <!-- Colors -->
    <!-- XXXXXXXXXXXXXXXXXX -->
    <color name="green">#00FF00</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="light_black">#101010</color>
    <color name="dark_gray">#585858</color>
    <color name="xtra_dark_blue">#1A6FA4</color>
    <color name="orange">#FFA114</color>
    <color name="dark_blue">#0F0CE8</color>
    <color name="med_blue">#007ACC</color>
    <color name="silver">#C2D6D6</color>
    <color name="blue">#66FFFF</color>
    <color name="red">#FF0000</color>
    <color name="clear">#0000</color>
    <color name="gray">#A8A8A8</color>
    <color name="clear_gray">#DD000000</color>
    <color name="clear_white">#80FFFFFF</color>

</resources>