<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tips_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/set_tips_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/set_tips_title"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Switch
            android:id="@+id/tips_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="@string/tips_switch"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tip_method_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tips_top_layout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:visibility="invisible" >

        <Button
            android:id="@+id/per_drink_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_weight="1"
            android:background="@drawable/green_shaded_button"
            android:text="@string/per_drink_button"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/percent_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginRight="36dp"
            android:layout_weight="1"
            android:background="@drawable/green_shaded_button"
            android:text="@string/percent_button"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tip_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip_method_layout"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/tips_selected_text_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="@string/tips_selected_text_top"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tip_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="@string/tip_amount"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tips_per_drink_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="@string/tips_per_drink_text"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tips_percent_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="@string/tips_percent_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bar_60"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/lobby_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/info_4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/crosshair_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/calc_icon"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/settings_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

</RelativeLayout>