<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/start_tab_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/start_tab_title"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/pick_drinks_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/button_bar_60"
            android:text="@string/pick_drinks_button"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/set_prices_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/button_bar_60"
            android:text="@string/set_prices_button"
            android:textColor="@color/white"
            android:textSize="20sp" />
        
        <Button
            android:id="@+id/set_tips_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/button_bar_60"
            android:text="@string/set_tips_button"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/set_goal_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/button_bar_60"
            android:text="@string/set_goal_button"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/start_tab_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/green_shaded_button"
            android:text="@string/start_tab_button"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bar_60"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/lobby_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/info_4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/crosshair_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/calc_icon"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/settings_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

</RelativeLayout>