<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_title"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/alarm_sound_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/button_bar_60"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/alarm_sound_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/alarm_sound_switch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="start|center_vertical"
                android:paddingRight="8dp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/alarm_distance_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/button_bar_60"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/alarm_distance_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/alarm_distance_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="end|center_vertical"
                android:paddingRight="8dp"
                android:text="@string/geo_radius_default"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/power_saver_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/button_bar_60"
                android:gravity="start|center_vertical"
                android:paddingLeft="8dp"
                android:text="@string/power_saver_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/power_saver_switch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="start|center_vertical"
                android:paddingRight="8dp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bar_60"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/lobby_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/info_4"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/crosshair_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/calculator_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/calc_icon"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/settings_2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

</RelativeLayout>